# geotruth-narrative-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  start.sh  stop.sh
.github/workflows/: build.yml  ci.yml
backend/: .env.example  docker-compose.dev.yml  docker-compose.yml
backend/services/api/: Dockerfile  requirements.txt
backend/services/cache/: redis.conf
desktop/: Dockerfile.dev  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/scripts/: download-binaries.sh
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config.rs  db.rs  enrich.rs  gemini.rs  geo.rs  lib.rs  main.rs  narrative.rs  processor.rs  state.rs  types.rs
desktop/src-tauri/src/commands/: enrich.rs  ingest.rs  mod.rs  narrate.rs  process.rs  video.rs
desktop/src-tauri/src/services/: data_manager.rs  database.rs  ffmpeg.rs  gps.rs  mod.rs  sync.rs  truth_engine.rs  whisper.rs
desktop/src/api/: client.ts
desktop/src/components/: CreateProjectModal.tsx  ElasticScript.tsx  ImportProgressModal.tsx  MapPacksModal.css  MapPacksModal.tsx  MomentCatcher.tsx  ProjectList.tsx  TruthTimeline.tsx  TruthTimelinePro.tsx  TruthVerification.tsx  index.ts
docs/: IMPLEMENTATION_ROADMAP.md  PROJECT_SPEC.md  logging.md
docs/api/: README.md
docs/architecture/: README.md  local-intelligence.md  truth-engine.md
docs/backend/: README.md
docs/desktop/: README.md
docs/development/: README.md
docs/security/: README.md
docs/user-guide/: README.md
reference/api/: Dockerfile.dev
(+21 files in other folders)
