[package]
name = "geotruth-desktop"
version = "0.1.0"
description = "GeoTruth Narrative Engine - Desktop Application"
authors = ["GeoTruth Team"]
license = "MIT"
repository = "https://github.com/your-org/geotruth-narrative-engine"
edition = "2021"
rust-version = "1.77"

[lib]
name = "geotruth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Client (for API communication)
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# UUID Generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# DuckDB for local storage
duckdb = { version = "1.1", features = ["bundled"] }

# Directories for platform-specific paths
dirs = "5.0"

# Lazy initialization
once_cell = "1.19"

# In-memory state
dashmap = { version = "6.0", features = ["serde"] }

# Geospatial
geo = "0.28"
geozero = "0.13"
pmtiles = { version = "0.11", features = ["mmap-async-tokio", "tilejson"] } # Using pmtiles crate for reading vector tiles

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
